[tool.poetry]
name = "fluxterra-dank"
version = "0.1.0"
description = "Do A Netlist m'Kay? (or Dope Ass Netlister Kit)"
authors = ["Calvin Maree <calvin@linuxmail.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
